# self_organizing

./: .hgtags  CMakeLists.txt  LICENSE  README  README.markdown  annotated.html  classcontainer.html  classcontainer__inherit__graph.map  classcontainer__inherit__graph.md5  classes.html  classself__organizing_1_1detail_1_1container-members.html  classself__organizing_1_1detail_1_1container.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_0001e9c559642aac4d05b7d36dac786ee.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4-members.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4_1_1const__iterator-members.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4_1_1const__iterator.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4_1_1const__iterator__.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4_1_1iterator-members.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4_1_1iterator.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4_1_1iterator__-members.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_01_4_1_1iterator__.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_03bb293b71ae7b424d0bb43ac4345e3db.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_05dc062112b7f48f4581f6808f14dbaa8.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_09f1a8709a2d5bfcc39652145a27d5a59.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_0be3cf4a14287b1fb6b35fb86110f182b.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_0c643df14152110a0201a7880aacaec85.html  classself__organizing_1_1detail_1_1container_3_01_container_00_01_t_00_01find__policy_1_1count_0e4562b14fecd74d2b63fcb2398c43e78.html  classself__organizing_1_1list-members.html  classself__organizing_1_1list.html  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_00_01insertion__policy_1_1count_01_4-members.html  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_00_01insertion__policy_1_1count_01_4.html  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_00_01insertion__policy_1_1count_01_4_1_1const__iterator-members.html  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_00_01insertion__policy_1_1count_01_4_1_1const__iterator.html  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_00_01insertion__policy_1_1count_01_4_1_1iterator-members.html  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_00_01insertion__policy_1_1count_01_4_1_1iterator.html  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_00_01insertion__policy_1_1count_01_4__coll__graph.md5  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_00_01insertion__policy_1_1count_01_4__inherit__graph.map  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_01_4-members.html  classself__organizing_1_1list_3_01_t_00_01find__policy_1_1count_01_4.html  (+87 more)
documentation/: CMakeLists.txt  Doxyfile.in  mainpage.h
examples/: CMakeLists.txt  example.cpp  main.cpp
include/: CMakeLists.txt  list.h  self_organizing.h
search/: all_62.js  all_63.js  all_66.js  all_6c.js  all_6d.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  classes_63.js  classes_69.js  classes_6c.js  classes_6d.js  classes_76.js  files_73.js  functions_63.js  functions_65.js  functions_6c.js  functions_6d.js  functions_70.js  functions_73.js  functions_76.js  namespaces_66.js  namespaces_73.js  pages_73.js  search.js  typedefs_63.js  typedefs_69.js  typedefs_70.js  typedefs_73.js  typedefs_76.js  variables_63.js
tests/: CMakeLists.txt  Performance results.xlsx  correctness.cpp  functional.cpp  performance.cpp
