include_directories(${PROJECT_SOURCE_DIR}/include)

if(MSVC)
	add_definitions(-D_SCL_SECURE_NO_WARNINGS)
endif()

if(CMAKE_COMPILER_IS_GNUCXX)
	set(CMAKE_CXX_FLAGS -std=c++0x)
endif()

add_executable(correctness catch.hpp correctness.cpp)
set_property(TARGET correctness PROPERTY FOLDER "tests")

add_executable(performance performance.cpp)
set_property(TARGET performance PROPERTY FOLDER "tests")

# API tests.
add_test(API/default_constructor correctness API/default_constructor)
add_test(API/range_constructor correctness API/range_constructor)
add_test(API/copy_constructor correctness API/copy_constructor)
add_test(API/front_and_back correctness API/front_and_back)
add_test(API/empty correctness API/empty)
add_test(API/size correctness API/size)
add_test(API/clear correctness API/clear)
add_test(API/erase correctness API/erase)
add_test(API/push_back correctness API/push_back)
add_test(API/find correctness API/find)
add_test(API/find_if correctness API/find_if)

# Policy tests.
add_test(policy/count correctness policy/count)
add_test(policy/transpose correctness policy/transpose)
add_test(policy/move_to_front correctness policy/move_to_front)
add_test(policy/empty correctness policy/empty)
add_test(policy/no_hits correctness policy/no_hits)
add_test(policy/count_one correctness policy/count_one)
add_test(policy/count_three correctness policy/count_three)
add_test(policy/count_order correctness policy/count_order)
add_test(policy/reverse_order correctness policy/reverse_order)
add_test(policy/count_random correctness policy/count_random)
add_test(policy/move_to_front_one correctness policy/move_to_front_one)
add_test(policy/move_to_front_three correctness policy/move_to_front_three)
add_test(policy/move_to_front_order correctness policy/move_to_front_order)
add_test(policy/move_to_front_reverse_order correctness policy/move_to_front_reverse_order)
add_test(policy/move_to_front_random correctness policy/move_to_front_random)
add_test(policy/transpose_one correctness policy/transpose_one)
add_test(policy/transpose_three correctness policy/transpose_three)
add_test(policy/transpose_order correctness policy/transpose_order)
add_test(policy/transpose_reverse_order correctness policy/transpose_reverse_order)
add_test(policy/transpose_random correctness policy/transpose_random)
